--- a/index.html
+++ b/index.html
@@ -1,126 +1,206 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Web-NER Demo</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Mercury Kane — Dynamic Time‑Based Webpage</title>
+  <meta name="description" content="A simple HTML + JavaScript page that changes background color based on the current time of day." />
   <style>
-    body { font-family: sans-serif; margin: 2em; }
-    textarea { width: 100%; height: 150px; }
-    .checkboxes { margin: 1em 0; }
-    .checkboxes label {
-      margin-right: 1em;
-      padding: 0.2em 0.4em;
-      border-radius: 4px;
-      background: #eee;
+    :root {
+      --bg: #ffffff;
+      --fg: #111111;
+      --card: rgba(255,255,255,0.65);
+    }
+    * { box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+      transition: background-color 400ms ease, color 300ms ease;
+      display: grid;
+      place-items: center;
+      padding: 2rem;
+    }
+    main {
+      width: min(720px, 100%);
+      backdrop-filter: blur(4px);
+      background: var(--card);
+      border: 1px solid rgba(0,0,0,0.06);
+      border-radius: 14px;
+      padding: 1.5rem;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.07);
+    }
+    h1, h2, h3 { margin: 0.25rem 0 0.5rem }
+    p { margin: 0.25rem 0 0.75rem }
+    ul { margin-top: 0.25rem }
+    code, .pill {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    }
+    .pill {
+      display: inline-block;
+      padding: 0.2rem 0.55rem;
+      border-radius: 999px;
+      border: 1px solid rgba(0,0,0,0.12);
+      background: rgba(255,255,255,0.55);
+      margin-right: 0.35rem;
+      font-size: 0.85rem;
+    }
+
+    /* Time-of-day themes using CSS variables */
+    .morning { --bg: #FFF4CC; --fg: #1a1a1a; --card: rgba(255,255,255,0.55); }
+    .afternoon { --bg: #DFF5FF; --fg: #111111; --card: rgba(255,255,255,0.55); }
+    .evening { --bg: #FFD6E7; --fg: #1a1a1a; --card: rgba(255,255,255,0.55); }
+    .night { --bg: #0B1320; --fg: #EAF2FF; --card: rgba(11,19,32,0.35); }
+    .sr-only {
+      position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px;
+      overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;
+    }
+    details { margin-top: 1rem; }
+    details > summary {
+      cursor: pointer;
+      user-select: none;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+    .controls {
+      display: grid;
+      gap: 0.75rem;
+    }
+    .row {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 0.75rem;
+      align-items: center;
+    }
+    input[type="range"] { width: 100%; }
+    button {
+      padding: 0.55rem 0.9rem;
+      border-radius: 8px;
+      border: 1px solid rgba(0,0,0,0.15);
+      background: rgba(255,255,255,0.6);
+      color: inherit;
       cursor: pointer;
     }
-    .checkboxes label.active {
-      color: #000;
-    }
-    .btn-group button {
-      margin-right: 0.5em;
-      padding: 0.3em 0.6em;
-      border: none;
-      border-radius: 4px;
-      background: #4285f4;
-      color: white;
-      cursor: pointer;
-    }
-    .btn-group button.clear {
-      background: #db4437;
-    }
+    footer { margin-top: 1rem; font-size: 0.9rem; opacity: 0.9; }
   </style>
 </head>
 <body>
-  <h1>Named Entity Recognition</h1>
+  <noscript>
+    <p style="padding:1rem;background:#fff3cd;border:1px solid #ffeeba;border-radius:8px;max-width:42rem;margin:1rem auto;">
+      This page uses JavaScript to change its background color based on the current time of day.
+      Please enable JavaScript to see the dynamic behavior.
+    </p>
+  </noscript>
 
-  <form id="ner-form"
-        action="{{ url_for('ner') }}"
-        method="post"
-        enctype="multipart/form-data">
+  <main role="main" aria-live="polite">
+    <h1>Mercury Kane</h1>
+    <p class="pill" aria-label="Course">COP 4813 Web Applications Programming</p>
+    <p class="pill" aria-label="Major">Major: Computer Science</p>
+    <h2>Welcome to my dynamic webpage!</h2>
 
-    <!-- 1) Manual text input -->
-    <label for="text">Enter text (150–200 words):</label><br>
-    <textarea id="text" name="text">{{ request.form.text or '' }}</textarea><br><br>
+    <section aria-labelledby="status-heading" style="margin-top:0.5rem">
+      <h3 id="status-heading">Status</h3>
+      <p>
+        Local time: <strong id="clock">--:--</strong> ·
+        It is currently <strong id="period">—</strong>.
+      </p>
+      <p style="margin-top:0.25rem">
+        Background color changes by time of day:
+      </p>
+      <ul>
+        <li>Morning (6:00 – 11:59)</li>
+        <li>Afternoon (12:00 – 17:59)</li>
+        <li>Evening (18:00 – 20:59)</li>
+        <li>Night (21:00 – 5:59)</li>
+      </ul>
+    </section>
 
-    <!-- 2) File upload -->
-    <label for="file">Or upload a document:</label><br>
-    <input type="file" id="file" name="file" accept=".pdf,.doc,.docx"><br><br>
+    <details>
+      <summary>Test controls: simulate a different hour</summary>
+      <div class="controls">
+        <div class="row">
+          <label for="hourRange"><span class="sr-only">Simulated hour</span><strong>Hour:</strong> <span id="hourLabel">—</span></label>
+          <input id="hourRange" type="range" min="0" max="23" step="1" value="0" />
+        </div>
+        <div class="row">
+          <button id="resetBtn" type="button" title="Return to your actual local time">Reset to current time</button>
+        </div>
+        <p style="margin:0">Tip: Drag the slider to preview morning/afternoon/evening/night instantly.</p>
+      </div>
+    </details>
 
-    <!-- 3) Select / Clear All buttons -->
-    <div class="btn-group">
-      <button type="button" id="select-all">Select All</button>
-      <button type="button" id="clear-all" class="clear">Clear All</button>
-    </div>
-
-    <!-- 4) The checkboxes -->
-    <div class="checkboxes">
-      <strong>Select entity types:</strong><br>
-      {% for label in labels %}
-        <label id="lab-{{ label }}">
-          <input
-            type="checkbox"
-            name="entities"
-            value="{{ label }}"
-            {% if label in request.form.getlist('entities') %}checked{% endif %}>
-          {{ label }}
-        </label>
-      {% endfor %}
-    </div>
-
-    <button type="submit">Process</button>
-  </form>
+    <footer>
+      Built with plain HTML, CSS, and JavaScript. No frameworks required.
+    </footer>
+  </main>
 
   <script>
-    // Grab our arrays of labels and colors from Flask context
-    const colors = {{ colors|tojson }};
-    const checkboxes = document.querySelectorAll('.checkboxes input[type=checkbox]');
-    const textarea  = document.getElementById('text');
-    const fileInput = document.getElementById('file');
-
-    // Helper to color a label when its box is checked
-    function updateLabel(cb) {
-      const lab = document.getElementById('lab-' + cb.value);
-      if (cb.checked) {
-        lab.classList.add('active');
-        lab.style.backgroundColor = colors[cb.value];
-      } else {
-        lab.classList.remove('active');
-        lab.style.backgroundColor = '#eee';
-      }
+    // --- Time segmentation ---
+    // Morning (06:00–11:59), Afternoon (12:00–17:59), Evening (18:00–20:59), Night (21:00–05:59)
+    function periodFromHour(h) {
+      if (h >= 6 && h < 12) return "morning";
+      if (h >= 12 && h < 18) return "afternoon";
+      if (h >= 18 && h < 21) return "evening";
+      return "night";
     }
 
-    // Initialize and wire each checkbox
-    checkboxes.forEach(cb => {
-      cb.addEventListener('change', () => updateLabel(cb));
-      updateLabel(cb);
+    const clockEl = document.getElementById("clock");
+    const periodEl = document.getElementById("period");
+    const hourRange = document.getElementById("hourRange");
+    const hourLabel = document.getElementById("hourLabel");
+    const resetBtn = document.getElementById("resetBtn");
+
+    let simulated = false;   // if true, we use slider hour; if false, we use real time
+    let tickHandle = null;
+
+    function pad2(n) { return n.toString().padStart(2, "0"); }
+
+    function applyThemeFromHour(hour) {
+      const p = periodFromHour(hour);
+      document.body.classList.remove("morning", "afternoon", "evening", "night");
+      document.body.classList.add(p);
+      periodEl.textContent = p.charAt(0).toUpperCase() + p.slice(1);
+    }
+
+    function tick() {
+      const now = new Date();
+      const h = now.getHours();
+      const m = now.getMinutes();
+      const s = now.getSeconds();
+      clockEl.textContent = `${pad2(h % 12 || 12)}:${pad2(m)} ${h < 12 ? "AM" : "PM"}`;
+      if (!simulated) applyThemeFromHour(h);
+    }
+
+    function startClock() {
+      // Update immediately, then every second
+      tick();
+      if (tickHandle) clearInterval(tickHandle);
+      tickHandle = setInterval(tick, 1000);
+    }
+
+    // Initialize controls
+    hourRange.addEventListener("input", () => {
+      simulated = true;
+      const h = parseInt(hourRange.value, 10);
+      hourLabel.textContent = `${pad2(h)}:00`;
+      applyThemeFromHour(h);
     });
 
-    // “Select All” / “Clear All”
-    document.getElementById('select-all').addEventListener('click', () => {
-      checkboxes.forEach(cb => { cb.checked = true;  updateLabel(cb); });
-    });
-    document.getElementById('clear-all').addEventListener('click', () => {
-      checkboxes.forEach(cb => { cb.checked = false; updateLabel(cb); });
+    resetBtn.addEventListener("click", () => {
+      simulated = false;
+      hourLabel.textContent = "current";
+      // Snap theme to real hour right away
+      applyThemeFromHour(new Date().getHours());
     });
 
-    // File → textarea extraction
-    fileInput.addEventListener('change', async () => {
-      if (!fileInput.files.length) return;
-      const formData = new FormData();
-      formData.append('file', fileInput.files[0]);
-
-      const resp = await fetch('{{ url_for("extract_text") }}', {
-        method: 'POST',
-        body: formData
-      });
-      if (!resp.ok) {
-        console.error('Extraction error');
-        return;
-      }
-      const data = await resp.json();
-      textarea.value = data.text;
-    });
+    // First paint: set hour label to "current", apply initial theme, and start clock
+    hourLabel.textContent = "current";
+    applyThemeFromHour(new Date().getHours());
+    startClock();
   </script>
 </body>
 </html>
