--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </section>
 
     <details>
-      <summary>Test controls: simulate a different hour</summary>
+      <summary>Test controls to simulate a different hour</summary>
       <div class="controls">
         <div class="row">
           <label for="hourRange"><span class="sr-only">Simulated hour</span><strong>Hour:</strong> <span id="hourLabel">—</span></label>
